--- a/slider.html
+++ b/slider.html
@@ -18,11 +18,11 @@
 <body>
     
     <!-- Subheading Slider Section Start -->
-    <section id="subheading" class="">
+    <section id="subheading" class="slider-main">
         <div class="container">
             <!-- Feature Info Title -->
             <div class="row">
-                <div class="col-12 text-center">
+                <div class="col-12 text-center mt-5 mb-5">
                     <h1>Feature Info Block</h1>
                 </div>
             </div>
@@ -53,6 +53,8 @@
                     <img src="./assets/images/Case studies@4x.png" alt="" class="img-fluid">
                 </div>
             </div>
+        </div>
+        <div class="container-fluid">
             <!-- Slide Sub heading Text -->
             <div class="row subHeading-slide">
                 <!-- Slide one -->
@@ -110,6 +112,7 @@
                     </div>
                 </div>
             </div>
+        </div>
     </section>
     <!-- Subheading Slider Section End -->
 
