slide six Icon Change

--- a/slider.html
+++ b/slider.html
@@ -50,7 +50,7 @@
                 </div>
                 <!-- Slide Six -->
                 <div class="col">
-                    <img src="./assets/images/Case studies@4x.png" alt="" class="img-fluid">
+                    <img src="./assets/images/Milk@4x.png" alt="" class="img-fluid">
                 </div>
             </div>
         </div>
