--- a/form.html
+++ b/form.html
@@ -20,8 +20,8 @@
         <div class="container">
             <!-- Section Head -->
             <div class="row">
-                <div class="col-12 text-center">
-                    <h2 class="section-head">Form Block</h2>
+                <div class="col-md-12 text-center">
+                    <h2 class="section-head form-section-head">Form Block</h2>
                 </div>
             </div>
             <!-- From Main Start -->
@@ -29,16 +29,16 @@
                 <div class="row">
 
                     <!-- ./ Form Field - One -->
-                    <div class="col-12 formFiled mt-5">
+                    <div class="col-12 formFiled">
                         <div class="row">
                             <!-- ./Form Field Label -->
-                            <div class="col-4">
+                            <div class="col-md-4">
                                 <div class="field-box-label">
                                     <label for="field-1" class="field-title">Form Field label : </label>
                                 </div>
                             </div>
                             <!-- ./Form Field Box -->
-                            <div class="col-7">
+                            <div class="col-md-7">
                                 <div class="field-box fb-error">
                                     <input type="text" name="" id="field-1" placeholder="Prompt Text" class="form-field field-1-box">
                                     <div class="form-msg">
@@ -48,7 +48,7 @@
                                 </div>
                             </div>
                             <!-- ./Form Filed Error Signal -->
-                            <div class="offset-1">
+                            <div class="offset-1 offset-md-1">
                                 <!-- <span class="form-signal signal-err">
                                     <i class="fas fa-exclamation-circle"></i>
                                 </span> -->
@@ -57,18 +57,18 @@
                     </div>
 
                     <!-- ./ Form Field - Two -->
-                    <div class="col-12 formFiled mt-5">
+                    <div class="col-12 formFiled formFilled-option-one">
                         <div class="row">
                             <!-- ./Form Field Label -->
-                            <div class="col-4">
+                            <div class="col-md-4">
                                 <div class="field-box-label">
                                     <label for="field-1" class="field-title">Form Field label : </label>
                                 </div>
                             </div>
                             <!-- ./Form Field Box -->
-                            <div class="col-7">
+                            <div class="col-md-7">
                                 <div class="field-box fb-right">
-                                    <select name="" id="field-1" placeholder="Empty Dropdown Text" class="form-field field-1-box">
+                                    <select name="" id="field-1" placeholder="Empty Dropdown Text" class="form-option field-1-box">
                                         <option value="Option 1">Option One</option>
                                         <option value="Option 1">Option Two</option>
                                         <option value="Option 1">Option Three</option>
@@ -89,16 +89,16 @@
                     </div>
 
                     <!-- ./ Form Field - Three -->
-                    <div class="col-12 formFiled mt-5">
+                    <div class="col-md-12 formFiled formFiled-birth">
                         <div class="row">
                             <!-- ./Form Field Label -->
-                            <div class="col-4">
+                            <div class="col-md-4">
                                 <div class="field-box-label">
                                     <label for="field-1" class="field-title">Form Field label : </label>
                                 </div>
                             </div>
                             <!-- ./Form Field Box -->
-                            <div class="col-7">
+                            <div class="col-md-7">
                                 <div class="field-box fb-right">
                                     <div class="row" id="field-1">
                                         <div class="col-2">
@@ -140,16 +140,16 @@
                     </div>
 
                     <!-- ./ Form Field - Four -->
-                    <div class="col-12 formFiled mt-5">
+                    <div class="col-md-12 formFiled formFiled-Checkbox">
                         <div class="row">
                             <!-- ./Form Field Label -->
-                            <div class="col-4">
-                                <div class="field-box-label">
+                            <div class="offset-md-4">
+                                <!-- <div class="field-box-label">
                                     <label for="field-1" class="field-title">Form Field label : </label>
-                                </div>
+                                </div> -->
                             </div>
                             <!-- ./Form Field Box -->
-                            <div class="col-7">
+                            <div class="col-md-7">
                                 <div class="field-box fb-error">
                                     <div class="frm-checkbox" id="field-1">
                                         <div class="checkBox">
@@ -167,14 +167,14 @@
                                             <label for="form-checkBox">checkBox Label</label>
                                         </div>
                                     </div>
-                                    <div class="form-msg">
+                                    <div class="form-msg form-msg-checkbox">
                                         <p>Form field Instructions to go here if required.</p>
                                         <p> Form field Instructions to go here if required.</p>
                                     </div>
                                 </div>
                             </div>
                             <!-- ./Form Filed Error Signal -->
-                            <div class="offset-1">
+                            <div class="offset-md-1">
                                 <!-- <span class="form-signal signal-err">
                                     <i class="fas fa-exclamation-circle"></i>
                                 </span> -->
@@ -183,19 +183,19 @@
                     </div>
 
                     <!-- ./ Form Field - five -->
-                    <div class="col-12 formFiled formFiled-btn">
+                    <div class="col-md-12 formFiled formFiled-btn">
                         <div class="row">
                             <!-- ./Form Field Label -->
-                            <div class="offset-3"></div>
+                            <div class="offset-md-3"></div>
                             <!-- ./Form Field Box -->
-                            <div class="col-7">
+                            <div class="col-md-7">
                                 <ul class="form-button">
                                     <li><a href="#" class="form-btn fb-submit">Submit</a></li>
                                     <li><a href="#" class="form-btn fb-reset">Reset</a></li>
                                 </ul>
                             </div>
                             <!-- ./Form Filed Error Signal -->
-                            <div class="offset-2"></div>
+                            <div class="offset-md-2"></div>
                         </div>
                     </div>
 
