--- a/form.html
+++ b/form.html
@@ -143,10 +143,10 @@
                     <div class="col-md-12 formFiled formFiled-Checkbox">
                         <div class="row">
                             <!-- ./Form Field Label -->
-                            <div class="offset-md-4">
-                                <!-- <div class="field-box-label">
+                            <div class="col-md-4">
+                                <div class="field-box-label field-box-label-checkbox">
                                     <label for="field-1" class="field-title">Form Field label : </label>
-                                </div> -->
+                                </div>
                             </div>
                             <!-- ./Form Field Box -->
                             <div class="col-md-7">
