Responsive Index Update

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container jumbotron">
         <ul>
-            <li><a class="btn-link" href="form.html">Form{Responsive Mobile: 375px} </a></li>
+            <li><a class="btn-link" href="form.html">Form{Responsive Mobile: 375px} {responsive Tablet: 768px} </a></li>
             <li><a class="btn-link" href="slider.html">Slider</a></li>
         </ul>
     </div>
